wordpress/06wordpress_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    app: wordpress

spec:
  #type: LoadBalancer
  type: ClusterIP
  selector: 
    app: wordpress
  ports: 
  - name: wp-svc-port
    port: 80
    targetPort: wp-port
