wordpress/07wordpress_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    app: wp
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: “5“ 
    nginx.ingress.kubernetes.io/limit-rpm: “300“
    
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.157.230.193.198.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-svc
          servicePort: wp-svc-port
