wordpress/wordpress.yaml
---

apiVersion:  apps/v1
kind: Deployment
metadata:
   name: wordpress-deploy
   labels:
      app: wordpress

spec:
   replicas: 1
   selector:
      matchLabels:
         app: wordpress
   template:
      metadata:
         name: wordpress-po
         labels:
            app: wordpress
      spec:
         volumes:
         - name: wordpress-vol 
           persistentVolumeClaim:
              claimName: wordpress-pvc
         containers:
            - name: wordpress-container
              image: wordpress
              imagePullPolicy: IfNotPresent
              ports:
              - name: wp-port
                containerPort: 80
              volumeMounts:
              - name: wordpress-vol
                mountPath: /var/www/html
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 0

---

apiVersion: v1
kind: Service
metadata:
   name: wordpress-svc
   labels:
      app: wordpress

spec:
   type: ClusterIP
   selector:
      app: wordpress
   ports:
   - name: wp-svc
     port: 80
     targetPort: wp-port

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: wordpress-ing
   labels:
      app: wordpress
   annotations:
      nginx.ingress.kubernetes.io/limit-rps: "5"

spec:
   ingressClassName: nginx
   rules:
   - host: wordpress.157.230.193.198.nip.io 
     http:
        paths:
        - path: /
          backend:
             serviceName: wordpress-svc
             servicePort: wp-svc
